# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  init_project.py  mkdocs.yml  pom.xml  pyproject.toml
docs/: api.md  index.md
src/cli/: __init__.py  main.py
src/main/java/com/java_spring_mvc/laptopshop/: LaptopshopApplication.java
src/main/java/com/java_spring_mvc/laptopshop/config/: WebMvcConfig.java
src/main/java/com/java_spring_mvc/laptopshop/controller/: UserController.java
src/main/java/com/java_spring_mvc/laptopshop/domain/: User.java
src/main/java/com/java_spring_mvc/laptopshop/repository/: UserRepository.java
src/main/java/com/java_spring_mvc/laptopshop/services/: UserService.java
src/main/resources/: application.properties
src/main/resources/static/: eric.html
src/main/webapp/WEB-INF/view/: Hello.jsp
src/main/webapp/WEB-INF/view/admin/user/: create.jsp  table-user.jsp
src/main/webapp/resources/css/: LoginAdmin.css  demo.css
src/placeholder/: __init__.py  utils.py
src/test/java/com/java_spring_mvc/java_spring_mvc/: JavaSpringMvcApplicationTests.java
tests/: test_cli.py  test_placeholder.py
